--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </ul>
     </section>
     <div>
-        <form action="">facebook</form>
-        <input type="text"  placeholder="user name">
-        <input type="password" placeholder="password">
+        <form action="" style="color: blue;">facebook</form>
+        <input type="text"  placeholder="user name"><br>
+        <input type="password" placeholder="password"><br>
         <button>login</button>
     </div>
 </body>
