--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="https://www.youtube.com/"><button>youtube</button></a></li>
         </ul>
     </section>
-    <div>
+    <div class="one" style="padding: 10px;">
         <form action="" style="color: blue;">facebook</form>
         <input type="text"  placeholder="user name"><br>
         <input type="password" placeholder="password"><br>
